--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1><%= @trestaurant.name %></h1>
-    <%= link_to edit_task_path(@restaurant.id), class: 'btn btn-light btn-sm border' do %>
+    <h1><%= @restaurant.name %></h1>
+    <%= link_to restaurant_path(@restaurant.id), class: 'btn btn-light btn-sm border' do %>
       <i class="fa fa-pencil"></i>
     <% end %>
   </div>
@@ -9,14 +9,10 @@
 
   <p class="well"><%= @task.details %></p>
 
-  <% if @task.completed %>
-    <i class="fa fa-check-square-o"></i> This task is completed
-  <% else %>
-    <i class="fa fa-square-o"></i> This task is not completed yet
-  <% end %>
+
 
   <hr>
-  <%= link_to tasks_path do %>
+  <%= link_to restaurant_path do %>
     <i class="fa-solid fa-arrow-rotate-left"></i> Back to list
   <% end %>
 </div>
